--- a/es/industrias/banks.html
+++ b/es/industrias/banks.html
@@ -15,7 +15,7 @@
 <body>
 
     <header id="header">
-        <nav>
+        <nav class="nav-es">
           <h1>SoeniX</h1>
           <a href="../index.html" id="logo-mobile">   
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 340 151.125">
@@ -169,14 +169,12 @@
                       </svg>
                   </a>
                   <ul id="under-servicios">
-                    <li class="cyber close"><a href="../servicios/analisis-forense.html">Análisis Cibernético Forense</a></li>
                     <li class="incident close"><a href="../servicios/respuesta-incidentes.html">Respuesta a Incidentes</a></li>
                     <li class="remote close"><a href="../servicios/preparacion-trabajo-remoto.html">Evaluación de Preparación para Trabajo Remoto</a></li>
                     <li class="framework close"><a href="../servicios/evaluacion-infraestructura.html">Evaluación de Infraestructura</a></li>
                     <li class="risk close"><a href="../servicios/evaluacion-riesgos.html">Evaluación de Riesgos</a></li>
                     <li class="pci close"><a href="../servicios/cumplimiento-pci-dss.html">Cumplimiento de PCI DSS</a></li>
                     <li class="penetration close"><a href="../servicios/pruebas-penetracion.html">Pruebas de Penetración</a></li>
-                    <li class="soc close"><a href="../servicios/auditoria-soc.html">Auditoría SOC 2</a></li>
                     <li class="social close"><a href="../servicios/ingenieria-social.html">Ingeniería Social</a></li>
                     <li class="vendor close"><a href="../servicios/riesgo-proveedores.html">Gestión de Riesgos de Proveedores</a></li>
                     <li class="virtual close"><a href="../servicios/ciso-virtual.html">CISO Virtual</a></li>
@@ -213,27 +211,8 @@
                     <span class="line"></span>
                   </div>
                 </li>
-                <li id="industrias-li" class="nav-li hide">
-                  <a href="../index.html#anchor-industrias">
-                      <p>Industrias</p>  
-                      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.5 29.5" style="enable-background:new 0 0 54.5 29.5;" xml:space="preserve" class="show-options" id="arrow-ind">
-                      <defs>
-                      </defs>
-                      <polyline class="st0" points="1.5,3 26.5,28 53,1.5 "/>
-                      </svg>
-                  </a>
-                  <ul id="under-industrias">
-                    <li class="healthcare close"><a href="healthcare.html">Cuidado de la salud</a></li>
-                    <li class="banks close"><a href="banks.html">Bancos y uniones de crédito</a></li>
-                    <li class="legal close"><a href="legal.html">Legal</a></li>
-                    <li class="education close"><a href="education.html">Educación</a></li>
-                    <li class="nonprofit close"><a href="nonprofit.html">Sin fines de lucro</a></li>
-                    <li class="gov close"><a href="government.html">Gobierno</a></li>
-                    <li class="manufacturing close"><a href="manufacturing.html">Fábricas</a></li>
-                    <li class="retail close"><a href="retail.html">Minoristas</a></li>
-                    <li class="professional close"><a href="professional.html">Servicios profesionales</a></li>
-                    <li class="financial close"><a href="financial.html">Servicios financieros</a></li>
-                  </ul>
+                <li class="nav-li hide" id="security-li">
+                  <a href="../security-ops.html">Ops de seguridad</a>
                   <div class="underline">
                     <span class="line"></span>
                   </div>
@@ -375,6 +354,31 @@
                       </g>
                     </svg>        
                   </a>
+                </li>
+                <li id="industrias-li" class="nav-li hide">
+                  <a href="../index.html#anchor-industrias">
+                      <p>Industrias</p>  
+                      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.5 29.5" style="enable-background:new 0 0 54.5 29.5;" xml:space="preserve" class="show-options" id="arrow-ind">
+                      <defs>
+                      </defs>
+                      <polyline class="st0" points="1.5,3 26.5,28 53,1.5 "/>
+                      </svg>
+                  </a>
+                  <ul id="under-industrias">
+                    <li class="healthcare close"><a href="healthcare.html">Cuidado de la salud</a></li>
+                    <li class="banks close"><a href="banks.html">Bancos y uniones de crédito</a></li>
+                    <li class="legal close"><a href="legal.html">Legal</a></li>
+                    <li class="education close"><a href="education.html">Educación</a></li>
+                    <li class="nonprofit close"><a href="nonprofit.html">Sin fines de lucro</a></li>
+                    <li class="gov close"><a href="government.html">Gobierno</a></li>
+                    <li class="manufacturing close"><a href="manufacturing.html">Fábricas</a></li>
+                    <li class="retail close"><a href="retail.html">Minoristas</a></li>
+                    <li class="professional close"><a href="professional.html">Servicios profesionales</a></li>
+                    <li class="financial close"><a href="financial.html">Servicios financieros</a></li>
+                  </ul>
+                  <div class="underline">
+                    <span class="line"></span>
+                  </div>
                 </li>
                 <li class="nav-li close hide">
                   <a href="../index.html#anchor-about">Nosotros</a>
