--- a/index.html
+++ b/index.html
@@ -169,14 +169,12 @@
                   </svg>
               </a>
               <ul id="under-servicios">
-                <li class="cyber close"><a href="servicios/cyber-forensics.html">Cyber Forensics</a></li>
                 <li class="incident close"><a href="servicios/incident-response.html">Incident Response</a></li>
                 <li class="remote close"><a href="servicios/remote-work-readiness.html">Remote Work Readiness Assesment</a></li>
                 <li class="framework close"><a href="servicios/framework-assesment.html">Framework Assesment</a></li>
                 <li class="risk close"><a href="servicios/risk-assesment.html">Risk Assesment</a></li>
                 <li class="pci close"><a href="servicios/pci-dss-compliance.html">PCI DSS Compliance</a></li>
                 <li class="penetration close"><a href="servicios/penetration-testing.html">Penetration Testing</a></li>
-                <li class="soc close"><a href="servicios/soc-audit.html">SOC 2 Audit</a></li>
                 <li class="social close"><a href="servicios/social-engineering.html">Social Engineering</a></li>
                 <li class="vendor close"><a href="servicios/vendor-risk.html">Vendor Risk Managements</a></li>
                 <li class="virtual close"><a href="servicios/virtual-ciso.html">Virtual CISO</a></li>
@@ -213,27 +211,8 @@
                 <span class="line"></span>
               </div>
             </li>
-            <li class="nav-li hide"  id="industrias-li">
-              <a href="index.html#anchor-industrias">
-                  <p>Industries</p>  
-                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.5 29.5" style="enable-background:new 0 0 54.5 29.5;" xml:space="preserve" class="show-options" id="arrow-ind">
-                  <defs>
-                  </defs>
-                  <polyline class="st0" points="1.5,3 26.5,28 53,1.5 "/>
-                  </svg>
-              </a>
-              <ul id="under-industrias">
-                <li class="healthcare close"><a href="industrias/healthcare.html">Healthcare</a></li>
-                <li class="banks close"><a href="industrias/banks.html">Banks & Credit Unions</a></li>
-                <li class="legal close"><a href="industrias/legal.html">Legal</a></li>
-                <li class="education close"><a href="industrias/education.html">Education</a></li>
-                <li class="nonprofit close"><a href="industrias/nonprofit.html">Nonprofit</a></li>
-                <li class="gov close"><a href="industrias/government.html">Government</a></li>
-                <li class="manufacturing close"><a href="industrias/manufacturing.html">Manufacturing</a></li>
-                <li class="retail close"><a href="industrias/retail.html">Retail</a></li>
-                <li class="professional close"><a href="industrias/professional.html">Professional Services</a></li>
-                <li class="financial close"><a href="industrias/financial.html">Financial Services</a></li>
-              </ul>
+            <li class="nav-li hide" id="security-li">
+              <a href="security-ops.html">Security Ops</a>
               <div class="underline">
                 <span class="line"></span>
               </div>
@@ -376,6 +355,31 @@
               </svg>          
             </a>
             </li>
+            <li class="nav-li hide"  id="industrias-li">
+              <a href="index.html#anchor-industrias">
+                  <p>Industries</p>  
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.5 29.5" style="enable-background:new 0 0 54.5 29.5;" xml:space="preserve" class="show-options" id="arrow-ind">
+                  <defs>
+                  </defs>
+                  <polyline class="st0" points="1.5,3 26.5,28 53,1.5 "/>
+                  </svg>
+              </a>
+              <ul id="under-industrias">
+                <li class="healthcare close"><a href="industrias/healthcare.html">Healthcare</a></li>
+                <li class="banks close"><a href="industrias/banks.html">Banks & Credit Unions</a></li>
+                <li class="legal close"><a href="industrias/legal.html">Legal</a></li>
+                <li class="education close"><a href="industrias/education.html">Education</a></li>
+                <li class="nonprofit close"><a href="industrias/nonprofit.html">Nonprofit</a></li>
+                <li class="gov close"><a href="industrias/government.html">Government</a></li>
+                <li class="manufacturing close"><a href="industrias/manufacturing.html">Manufacturing</a></li>
+                <li class="retail close"><a href="industrias/retail.html">Retail</a></li>
+                <li class="professional close"><a href="industrias/professional.html">Professional Services</a></li>
+                <li class="financial close"><a href="industrias/financial.html">Financial Services</a></li>
+              </ul>
+              <div class="underline">
+                <span class="line"></span>
+              </div>
+            </li>
             <li class="nav-li hide close">
               <a href="index.html#anchor-about">About us</a>
               <div class="underline">
@@ -474,19 +478,19 @@
         <h2>Our Services</h2>
         <div class="anchor" id="anchor-servicios"></div>
         <div id="services-icons">
-            <div class="icon cyber" data-aos="flip-left" data-aos-offset="25">
-            <img src="img/cyber-icon.png" alt="">
-            <p>Cyber forensics</p>
-            <p>+</p>
-            </div>
-            <div class="icon incident" data-aos="flip-left" data-aos-offset="50">
+            <div class="icon incident" data-aos="flip-left" data-aos-offset="25">
               <img src="img/incident-icon.png" alt="">
                 <p>Incident response</p>
                 <p>+</p>
             </div>    
-            <div class="icon remote" data-aos="flip-left" data-aos-offset="75">
+            <div class="icon remote" data-aos="flip-left" data-aos-offset="50">
               <img src="img/remote-icon.png" alt="">
                 <p>Remote Work</p>
+                <p>+</p>
+            </div>
+            <div class="icon risk" data-aos="flip-left" data-aos-offset="75">
+              <img src="img/risk-icon.png" alt="">
+                <p>Risk Assesment</p>
                 <p>+</p>
             </div>
             <div class="icon framework" data-aos="flip-left" data-aos-offset="100">
@@ -494,58 +498,38 @@
                 <p>Framework Assesment</p>
                 <p>+</p>
             </div>
-            <div class="icon risk" data-aos="flip-left" data-aos-offset="125">
-              <img src="img/risk-icon.png" alt="">
-                <p>Risk Assesment</p>
-                <p>+</p>
-            </div>
-            <div class="icon pci" data-aos="flip-left" data-aos-offset="150">
+            <div class="icon pci" data-aos="flip-left" data-aos-offset="125">
               <img src="img/pci-icon.png" alt="">
                 <p>PCI / DSS Compliance</p>
                 <p>+</p>
             </div>
-            <div class="icon penetration" data-aos="flip-left" data-aos-offset="175">
+            <div class="icon penetration" data-aos="flip-left" data-aos-offset="150">
               <img src="img/penetration-icon.png" alt="">
                 <p>Penetration testing</p>
                 <p>+</p>
             </div>
-            <div class="icon soc" data-aos="flip-left" data-aos-offset="200">
-              <img src="img/soc-icon.png" alt="">
-                <p>SOC 2 <br> Audit</p>
-                <p>+</p>
-            </div>
-            <div class="icon social" data-aos="flip-left" data-aos-offset="225">
+            <div class="icon social" data-aos="flip-left" data-aos-offset="175">
               <img src="img/social-icon.png" alt="">
                 <p>Social Engineering</p>
                 <p>+</p>
             </div>
-            <div class="icon vendor" data-aos="flip-left" data-aos-offset="250">
+            <div class="icon vendor" data-aos="flip-left" data-aos-offset="200">
               <img src="img/vendor-icon.png" alt="">
                 <p>Vendor risk management</p>
                 <p>+</p>
             </div>
-            <div class="icon virtual" data-aos="flip-left" data-aos-offset="275">
+            <div class="icon virtual" data-aos="flip-left" data-aos-offset="225">
               <img src="img/virtual-icon.png" alt="">
             <p>Virtual <br> CISO</p>
             <p>+</p>
             </div>
-            <div class="icon vulnerability" data-aos="flip-left" data-aos-offset="300">
+            <div class="icon vulnerability" data-aos="flip-left" data-aos-offset="250">
               <img src="img/vulnerability-icon.png" alt="">
                 <p>Vulnerability assesment</p>
                 <p>+</p>
             </div>
         </div>
-        <div class="services-text cyber show">
-            <div class="service-info">
-            <h3>Cyber Forensics</h3>
-            <p>Our forensics solutions will give you attack context, infrastructure-wide visibility, codified expertise, rich intelligence, and insights gained from front-line experience responding to the world’s most impactful threats. So, you’ll have everything you need to rapidly detect, triage, investigate, and minimize the impact of attacks.</p>
-            <a href="servicios/cyber-forensics.html">Learn more +</a>
-            </div>
-            <div class="service-img">
-              <img src="img/cyber.png" alt="">
-            </div>
-        </div>
-        <div class="services-text incident">
+        <div class="services-text incident show">
             <div class="service-info">
             <h3>Incident Response</h3>
             <p>We guarantee an organized aproach to addressing and managing the aftermath of a security breach or cyberattack. Our goal is to handle the situation in a way that limits damage and reduces recovery time and costs.
@@ -611,17 +595,6 @@
             <img src="img/penetration.png" alt="">
           </div>
         </div>
-        <div class="services-text soc">
-          <div class="service-info">
-          <h3>SOC 2 Audit</h3>
-          <p>Whether you’re faced with SOC 2 regulatory requirements or demands from management, we can help prepare you for a SOC 2 audit through our readiness assessments.
-          </p>
-          <a href="servicios/soc-audit.html">Learn more +</a>
-          </div>
-          <div class="service-img">
-            <img src="img/soc.png" alt="">
-          </div>
-        </div>
         <div class="services-text social">
           <div class="service-info">
           <h3>Social Engineering</h3>
@@ -674,7 +647,7 @@
     </div>
 
     <div id="industrias" data-aos="fade-up" data-aos-offset="300">
-      <h2>Industries</h2>
+      <h2>Industries we serve</h2>
       <div class="anchor" id="anchor-industrias"></div>
       <div id="industrias-icons">
           <div class="icon-ind health" data-aos="flip-left" data-aos-offset="25">
