--- a/industrias/government.html
+++ b/industrias/government.html
@@ -169,14 +169,12 @@
                   </svg>
               </a>
               <ul id="under-servicios">
-                <li class="cyber close"><a href="../servicios/cyber-forensics.html">Cyber Forensics</a></li>
                 <li class="incident close"><a href="../servicios/incident-response.html">Incident Response</a></li>
                 <li class="remote close"><a href="../servicios/remote-work-readiness.html">Remote Work Readiness Assesment</a></li>
                 <li class="framework close"><a href="../servicios/framework-assesment.html">Framework Assesment</a></li>
                 <li class="risk close"><a href="../servicios/risk-assesment.html">Risk Assesment</a></li>
                 <li class="pci close"><a href="../servicios/pci-dss-compliance.html">PCI DSS Compliance</a></li>
                 <li class="penetration close"><a href="../servicios/penetration-testing.html">Penetration Testing</a></li>
-                <li class="soc close"><a href="../servicios/soc-audit.html">SOC 2 Audit</a></li>
                 <li class="social close"><a href="../servicios/social-engineering.html">Social Engineering</a></li>
                 <li class="vendor close"><a href="../servicios/vendor-risk.html">Vendor Risk Managements</a></li>
                 <li class="virtual close"><a href="../servicios/virtual-ciso.html">Virtual CISO</a></li>
@@ -213,27 +211,8 @@
                 <span class="line"></span>
               </div>
             </li>
-            <li id="industrias-li" class="nav-li hide">
-              <a href="../index.html#anchor-industrias">
-                  <p>Industries</p>  
-                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.5 29.5" style="enable-background:new 0 0 54.5 29.5;" xml:space="preserve" class="show-options" id="arrow-ind">
-                  <defs>
-                  </defs>
-                  <polyline class="st0" points="1.5,3 26.5,28 53,1.5 "/>
-                  </svg>
-              </a>
-              <ul id="under-industrias">
-                <li class="healthcare close"><a href="healthcare.html">Healthcare</a></li>
-                <li class="banks close"><a href="banks.html">Banks & Credit Unions</a></li>
-                <li class="legal close"><a href="legal.html">Legal</a></li>
-                <li class="education close"><a href="education.html">Education</a></li>
-                <li class="nonprofit close"><a href="nonprofit.html">Nonprofit</a></li>
-                <li class="gov close"><a href="government.html">Government</a></li>
-                <li class="manufacturing close"><a href="manufacturing.html">Manufacturing</a></li>
-                <li class="retail close"><a href="retail.html">Retail</a></li>
-                <li class="professional close"><a href="professional.html">Professional Services</a></li>
-                <li class="financial close"><a href="financial.html">Financial Services</a></li>
-              </ul>
+            <li class="nav-li hide" id="security-li">
+              <a href="../security-ops.html">Security Ops</a>
               <div class="underline">
                 <span class="line"></span>
               </div>
@@ -375,6 +354,31 @@
                   </g>
                 </svg>   
               </a>
+            </li>
+            <li id="industrias-li" class="nav-li hide">
+              <a href="../index.html#anchor-industrias">
+                  <p>Industries</p>  
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.5 29.5" style="enable-background:new 0 0 54.5 29.5;" xml:space="preserve" class="show-options" id="arrow-ind">
+                  <defs>
+                  </defs>
+                  <polyline class="st0" points="1.5,3 26.5,28 53,1.5 "/>
+                  </svg>
+              </a>
+              <ul id="under-industrias">
+                <li class="healthcare close"><a href="healthcare.html">Healthcare</a></li>
+                <li class="banks close"><a href="banks.html">Banks & Credit Unions</a></li>
+                <li class="legal close"><a href="legal.html">Legal</a></li>
+                <li class="education close"><a href="education.html">Education</a></li>
+                <li class="nonprofit close"><a href="nonprofit.html">Nonprofit</a></li>
+                <li class="gov close"><a href="government.html">Government</a></li>
+                <li class="manufacturing close"><a href="manufacturing.html">Manufacturing</a></li>
+                <li class="retail close"><a href="retail.html">Retail</a></li>
+                <li class="professional close"><a href="professional.html">Professional Services</a></li>
+                <li class="financial close"><a href="financial.html">Financial Services</a></li>
+              </ul>
+              <div class="underline">
+                <span class="line"></span>
+              </div>
             </li>
             <li class="nav-li close hide">
               <a href="../index.html#anchor-about">About us</a>
