--- a/es/servicios/riesgo-proveedores.html
+++ b/es/servicios/riesgo-proveedores.html
@@ -15,7 +15,7 @@
 <body>
 
   <header id="header">
-    <nav>
+    <nav class="nav-es">
       <h1>SoeniX</h1>
       <a href="../index.html" id="logo-mobile">   
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 340 151.125">
@@ -169,14 +169,12 @@
                   </svg>
               </a>
               <ul id="under-servicios">
-                <li class="cyber close"><a href="analisis-forense.html">Análisis Cibernético Forense</a></li>
                 <li class="incident close"><a href="respuesta-incidentes.html">Respuesta a Incidentes</a></li>
                 <li class="remote close"><a href="preparacion-trabajo-remoto.html">Evaluación de Preparación para Trabajo Remoto</a></li>
                 <li class="framework close"><a href="evaluacion-infraestructura.html">Evaluación de Infraestructura</a></li>
                 <li class="risk close"><a href="evaluacion-riesgos.html">Evaluación de Riesgos</a></li>
                 <li class="pci close"><a href="cumplimiento-pci-dss.html">Cumplimiento de PCI DSS</a></li>
                 <li class="penetration close"><a href="pruebas-penetracion.html">Pruebas de Penetración</a></li>
-                <li class="soc close"><a href="auditoria-soc.html">Auditoría SOC 2</a></li>
                 <li class="social close"><a href="ingenieria-social.html">Ingeniería Social</a></li>
                 <li class="vendor close"><a href="riesgo-proveedores.html">Gestión de Riesgos de Proveedores</a></li>
                 <li class="virtual close"><a href="ciso-virtual.html">CISO Virtual</a></li>
@@ -213,27 +211,8 @@
                 <span class="line"></span>
               </div>
             </li>
-            <li id="industrias-li" class="nav-li hide">
-              <a href="../index.html#anchor-industrias">
-                  <p>Industrias</p>  
-                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.5 29.5" style="enable-background:new 0 0 54.5 29.5;" xml:space="preserve" class="show-options" id="arrow-ind">
-                  <defs>
-                  </defs>
-                  <polyline class="st0" points="1.5,3 26.5,28 53,1.5 "/>
-                  </svg>
-              </a>
-              <ul id="under-industrias">
-                <li class="healthcare close"><a href="../industrias/healthcare.html">Cuidado de la salud</a></li>
-                <li class="banks close"><a href="../industrias/banks.html">Bancos y uniones de crédito</a></li>
-                <li class="legal close"><a href="../industrias/legal.html">Legal</a></li>
-                <li class="education close"><a href="../industrias/education.html">Educación</a></li>
-                <li class="nonprofit close"><a href="../industrias/nonprofit.html">Sin fines de lucro</a></li>
-                <li class="gov close"><a href="../industrias/government.html">Gobierno</a></li>
-                <li class="manufacturing close"><a href="../industrias/manufacturing.html">Fábricas</a></li>
-                <li class="retail close"><a href="../industrias/retail.html">Minoristas</a></li>
-                <li class="professional close"><a href="../industrias/professional.html">Servicios profesionales</a></li>
-                <li class="financial close"><a href="../industrias/financial.html">Servicios financieros</a></li>
-              </ul>
+            <li class="nav-li hide" id="security-li">
+              <a href="../security-ops.html">Ops de seguridad</a>
               <div class="underline">
                 <span class="line"></span>
               </div>
@@ -375,6 +354,31 @@
                   </g>
                 </svg>      
               </a>
+            </li>
+            <li id="industrias-li" class="nav-li hide">
+              <a href="../index.html#anchor-industrias">
+                  <p>Industrias</p>  
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.5 29.5" style="enable-background:new 0 0 54.5 29.5;" xml:space="preserve" class="show-options" id="arrow-ind">
+                  <defs>
+                  </defs>
+                  <polyline class="st0" points="1.5,3 26.5,28 53,1.5 "/>
+                  </svg>
+              </a>
+              <ul id="under-industrias">
+                <li class="healthcare close"><a href="../industrias/healthcare.html">Cuidado de la salud</a></li>
+                <li class="banks close"><a href="../industrias/banks.html">Bancos y uniones de crédito</a></li>
+                <li class="legal close"><a href="../industrias/legal.html">Legal</a></li>
+                <li class="education close"><a href="../industrias/education.html">Educación</a></li>
+                <li class="nonprofit close"><a href="../industrias/nonprofit.html">Sin fines de lucro</a></li>
+                <li class="gov close"><a href="../industrias/government.html">Gobierno</a></li>
+                <li class="manufacturing close"><a href="../industrias/manufacturing.html">Fábricas</a></li>
+                <li class="retail close"><a href="../industrias/retail.html">Minoristas</a></li>
+                <li class="professional close"><a href="../industrias/professional.html">Servicios profesionales</a></li>
+                <li class="financial close"><a href="../industrias/financial.html">Servicios financieros</a></li>
+              </ul>
+              <div class="underline">
+                <span class="line"></span>
+              </div>
             </li>
             <li class="nav-li close hide">
               <a href="../index.html#anchor-about">Nosotros</a>
@@ -567,21 +571,25 @@
       </div>
       </div>
       </div>
-      <a href="../index.html#anchor-contacto" class="call-to-action">
-        <div id="wrapper">
-        <p>Solicita UN presupuesto</p>
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 339.8 235.5" style="enable-background:new 0 0 339.8 235.5;" xml:space="preserve">
-        <defs>
-        </defs>
-        <path class="st0" d="M287.6,132.5c-10.3,0-20.6,0-30.9,0c-78,0-156,0-233.9,0c-3,0-6,0.1-9-0.3c-8.6-1.1-14.2-7.6-13.8-15.6
-        c0.4-7.8,7-13.6,15.6-13.6c53,0,106,0,159,0c36.7,0,73.3,0,110,0c1.3,0,2.6,0,4.4,0c-0.7-2.3-2.3-3.3-3.5-4.5
-        c-24.1-24.2-48.3-48.3-72.5-72.4c-3.8-3.8-6-8-5.3-13.3C208.3,7,211.5,2.9,217,1c5.9-2.1,11.2-0.8,15.7,3.5
-        c6.2,6,12.3,12.2,18.4,18.3c26.9,26.9,53.7,53.7,80.6,80.6c1.1,1.1,2.1,2.1,3.1,3.2c6.6,7.2,6.6,15.2-0.2,22.2
-        c-5.5,5.6-11.1,11.1-16.6,16.6c-28,28-56.1,56.1-84.1,84.1c-6.2,6.2-12.1,7.4-18.4,4.1c-9.1-4.7-10.8-15.9-3.4-23.6
-        c7.7-8.1,15.7-15.8,23.6-23.7c16.3-16.3,32.5-32.5,48.8-48.8c1.3-1.3,2.5-2.6,3.7-3.9C288,133.3,287.8,132.9,287.6,132.5z"/>
-        </svg>
-        </div>
-      </a>
+      <div id="call-to">
+        <video src="../../img/call-to.mp4" muted autoplay loop></video>
+        <p class="text">No esperes más...</p>
+        <a href="../index.html#anchor-contacto" class="call-to-action">
+          <div id="wrapper">
+          <p>Pregunta a nuestros expertos</p>
+          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 339.8 235.5" style="enable-background:new 0 0 339.8 235.5;" xml:space="preserve">
+          <defs>
+          </defs>
+          <path class="st0" d="M287.6,132.5c-10.3,0-20.6,0-30.9,0c-78,0-156,0-233.9,0c-3,0-6,0.1-9-0.3c-8.6-1.1-14.2-7.6-13.8-15.6
+          c0.4-7.8,7-13.6,15.6-13.6c53,0,106,0,159,0c36.7,0,73.3,0,110,0c1.3,0,2.6,0,4.4,0c-0.7-2.3-2.3-3.3-3.5-4.5
+          c-24.1-24.2-48.3-48.3-72.5-72.4c-3.8-3.8-6-8-5.3-13.3C208.3,7,211.5,2.9,217,1c5.9-2.1,11.2-0.8,15.7,3.5
+          c6.2,6,12.3,12.2,18.4,18.3c26.9,26.9,53.7,53.7,80.6,80.6c1.1,1.1,2.1,2.1,3.1,3.2c6.6,7.2,6.6,15.2-0.2,22.2
+          c-5.5,5.6-11.1,11.1-16.6,16.6c-28,28-56.1,56.1-84.1,84.1c-6.2,6.2-12.1,7.4-18.4,4.1c-9.1-4.7-10.8-15.9-3.4-23.6
+          c7.7-8.1,15.7-15.8,23.6-23.7c16.3-16.3,32.5-32.5,48.8-48.8c1.3-1.3,2.5-2.6,3.7-3.9C288,133.3,287.8,132.9,287.6,132.5z"/>
+          </svg>
+          </div>
+        </a>
+      </div>
     </main>
 
     <footer>
