--- a/es/security-ops.html
+++ b/es/security-ops.html
@@ -212,7 +212,33 @@
                   </div>
                 </li>
                 <li class="nav-li hide" id="security-li">
-                  <a href="security-ops.html">Ops de seguridad</a>
+                  <a href="security-ops.html">
+                    <p>Ops seguridad</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170.733 130.494">
+                      <g id="Grupo_8" data-name="Grupo 8" transform="translate(-1835.509 -1361.491)">
+                        <path id="Trazado_9" data-name="Trazado 9" d="M1922.845,1491.468c-13.872,0-27.744.025-41.616-.012-5.448-.015-7.326-1.9-7.006-7.5.815-14.278,3.9-27.677,14.365-38.011a24.019,24.019,0,0,1,6.969-5.195c1.287-.568,3.015-3.2,4.193-.32.831,2.037,2.875,4.434-.81,6.662-12.651,7.648-16.389,20.465-17.593,34.611-.15,1.77.462,2.464,2.018,2.573,1.11.078,2.218.239,3.328.245,24.081.121,48.163.106,72.241.436,4.584.063,5.209-1.442,4.6-5.766-1.895-13.368-5.968-25.225-18.094-32.246-3.2-1.852-.722-4.178-.249-6.061.57-2.266,2.322-.951,3.489-.326,8.164,4.368,13.645,11.321,17.258,19.969a64.977,64.977,0,0,1,4.795,24.279c.082,5.232-1.731,7.18-6.737,7.18h-41.148Z" transform="translate(-1.646)"/>
+                        <path id="Trazado_10" data-name="Trazado 10" d="M1970.051,1361.533c11,0,22-.033,32.992.011,5.259.02,7.146,2.016,7.158,7.491q.04,18.727,0,37.455c-.015,5.005-1.817,6.943-6.586,6.96-14.822.051-29.648-.16-44.465.128-4.385.085-4.9-3.1-5.758-5.866-.729-2.338,1.583-1.468,2.534-1.476,9.882-.084,19.763-.052,29.645-.053,4.781,0,9.566-.109,14.342.041,2.47.078,3.379-.809,3.355-3.42-.093-10.153-.119-20.31.014-30.462.039-2.975-1.158-3.577-3.7-3.567-19.923.079-39.846.107-59.768-.021-3.075-.02-3.786,1.216-3.695,4.1.156,4.989.1,9.988-.006,14.98-.027,1.25.74,3.6-1.514,3.295-1.924-.264-5.16.315-5.287-2.869a199.433,199.433,0,0,1,.068-21.956c.244-3.469,3.231-4.846,6.731-4.81C1947.418,1361.607,1958.735,1361.535,1970.051,1361.533Z" transform="translate(-3.981)"/>
+                        <path id="Trazado_11" data-name="Trazado 11" d="M1875.853,1361.533q16.03,0,32.062,0c7.241.007,8.473,1.339,8.475,9.095,0,5.5-.164,11,.051,16.492.171,4.348-3.118,3.669-5.25,3.988-2.836.424-1.515-2.286-1.559-3.536-.173-4.992-.185-10-.03-14.99.085-2.723-.658-3.831-3.462-3.817q-30.148.147-60.3-.008c-2.9-.016-3.407,1.216-3.379,3.849.106,9.829.169,19.662-.028,29.487-.068,3.351,1.032,4.182,4.083,4.15,13.876-.146,27.754-.107,41.631,0,1.4.012,4.257-1.233,3.964,1.455-.233,2.127-.457,5.685-4.109,5.728-3.668.043-7.337.033-11.006.034-11.484,0-22.97.03-34.454-.013-5.227-.019-6.979-1.78-7-7.109q-.077-18.742,0-37.486c.019-5.621,1.712-7.3,7.293-7.315C1853.84,1361.51,1864.847,1361.533,1875.853,1361.533Z" transform="translate(0)"/>
+                        <path id="Trazado_12" data-name="Trazado 12" d="M1923.481,1449.985c-14.25,0-25.453-11.719-25.467-26.637s11.137-26.732,25.334-26.808c14.421-.077,26,11.989,25.826,26.916C1949,1438.307,1937.689,1449.988,1923.481,1449.985Zm18.72-27.25c-.27-10.872-8.855-19.223-19.437-18.908-10.064.3-18.341,9.488-18.008,19.992s9.046,19.222,19.048,19.029C1934.15,1442.649,1942.47,1433.553,1942.2,1422.735Z" transform="translate(-2.66)"/>
+                        <path id="Trazado_13" data-name="Trazado 13" d="M1983.639,1423.534c6.849,0,13.7-.035,20.549.01,5.313.034,7.219,1.981,7.231,7.406q.046,18.717,0,37.434c-.014,5.129-1.718,7.012-6.478,7.062-7.167.076-14.344-.2-21.5.1-3.927.168-4-2.54-4.231-5.091-.334-3.673,2.573-2.15,4.057-2.2q8.832-.283,17.677-.027c2.729.08,3.588-.932,3.555-3.727-.118-9.981-.161-19.966.016-29.945.058-3.283-1.256-3.819-3.985-3.8q-19.354.172-38.707-.005c-1.651-.013-4.413,1.423-4.077-2.717.256-3.152.882-4.736,4.394-4.6C1969.294,1423.735,1976.47,1423.535,1983.639,1423.534Z" transform="translate(-5.201)"/>
+                        <path id="Trazado_14" data-name="Trazado 14" d="M1866.114,1430.819c-6.7,0-13.4.108-20.09-.052-2.667-.063-3.608.783-3.567,3.655.14,9.991.167,19.987-.014,29.976-.059,3.2,1.094,3.92,3.887,3.838,6.055-.176,12.117-.071,18.177-.036,1.524.009,3.544-.376,3.106,2.352-.317,1.976.193,4.806-2.9,4.842-8.131.093-16.27.218-24.391-.08-3.007-.11-4.766-2.494-4.774-5.794-.028-13.323-.053-26.646.015-39.969.019-3.751,2.054-5.949,5.643-5.97,14.829-.083,29.659.059,44.486-.1,3.948-.043,3.2,2.991,3.562,5.115.56,3.321-2.128,2.146-3.533,2.172C1879.191,1430.887,1872.651,1430.819,1866.114,1430.819Z" transform="translate(-0.001)"/>
+                        <path id="Trazado_15" data-name="Trazado 15" d="M1876.368,1380.984c-7.333,0-14.668-.1-22,.055-2.623.056-3.631-.652-3.611-3.583.019-2.86.912-3.674,3.584-3.653q21.758.168,43.518,0c2.9-.025,3.4,1.27,3.416,3.879.02,2.665-.971,3.394-3.389,3.351C1890.717,1380.9,1883.542,1380.984,1876.368,1380.984Z" transform="translate(-0.649)"/>
+                        <path id="Trazado_16" data-name="Trazado 16" d="M1875.96,1390.983c-7.333,0-14.668-.107-22,.056-2.639.059-3.224-1.051-3.161-3.515.057-2.246.168-3.74,3-3.718q22.236.172,44.475.005c2.861-.02,2.9,1.6,2.984,3.792.1,2.581-.8,3.477-3.3,3.43C1890.627,1390.894,1883.293,1390.983,1875.96,1390.983Z" transform="translate(-0.651)"/>
+                        <path id="Trazado_17" data-name="Trazado 17" d="M1960.115,1436.189c11.124,0,22.247.08,33.369-.055,2.908-.035,2.856,1.6,2.937,3.781.091,2.458-.5,3.632-3.141,3.589-8.12-.131-16.244,0-24.366-.065C1964.556,1443.4,1962.858,1439.176,1960.115,1436.189Z" transform="translate(-5.304)"/>
+                        <path id="Trazado_18" data-name="Trazado 18" d="M1864.3,1401.461c-3.172,0-6.348-.1-9.514.035-2.607.115-4.044-.372-4.046-3.711,0-3.412,1.551-3.681,4.108-3.639q10.227.17,20.458,0c2.466-.045,3.332.836,3.332,3.431,0,2.616-.544,4.054-3.4,3.925C1871.6,1401.334,1867.952,1401.459,1864.3,1401.461Z" transform="translate(-0.648)"/>
+                        <path id="Trazado_19" data-name="Trazado 19" d="M1969.282,1446.2c9.15,0,17.084.061,25.019-.033,2.822-.033,2.417,1.892,2.469,3.7.055,1.938.106,3.658-2.581,3.612-6.058-.1-12.118.042-18.176-.055C1972.093,1453.362,1971.933,1449.411,1969.282,1446.2Z" transform="translate(-5.694)"/>
+                        <path id="Trazado_20" data-name="Trazado 20" d="M1967.839,1387.432c0,2.83-.087,5.664.027,8.489.1,2.5-.257,3.956-3.283,4.006-3.16.052-3.7-1.27-3.62-4.127q.248-8.732,0-17.477c-.077-2.653.789-3.4,3.264-3.389,2.508.011,3.887.458,3.662,3.512C1967.667,1381.425,1967.839,1384.435,1967.839,1387.432Z" transform="translate(-5.339)"/>
+                        <path id="Trazado_21" data-name="Trazado 21" d="M2000.839,1387.359c0,2.83-.147,5.671.041,8.488.2,2.949-.65,4.086-3.707,4.08-3.131-.005-3.223-1.638-3.188-4.049.084-5.827.132-11.658-.02-17.481-.066-2.552.605-3.529,3.19-3.461,2.411.064,3.976.272,3.733,3.436C2000.658,1381.35,2000.838,1384.362,2000.839,1387.359Z" transform="translate(-6.744)"/>
+                        <path id="Trazado_22" data-name="Trazado 22" d="M1857.679,1448.529c0,2.995-.148,6,.043,8.98.179,2.781-.713,3.727-3.455,3.731-2.777,0-3.539-1.02-3.463-3.771.161-5.818.186-11.648,0-17.464-.1-3.077,1.294-3.488,3.746-3.524,2.586-.037,3.305,1.073,3.169,3.566C1857.56,1442.866,1857.678,1445.7,1857.679,1448.529Z" transform="translate(-0.651)"/>
+                        <path id="Trazado_23" data-name="Trazado 23" d="M1989.836,1388.876c.006,2.319-.13,4.648.039,6.952.213,2.885-.588,4.106-3.651,4.095-3.02-.01-3.3-1.462-3.246-3.957.116-5.13.133-10.268,0-15.4-.066-2.5,1.008-3.138,3.128-3.046,1.945.084,3.906-.2,3.755,2.911C1989.723,1383.24,1989.83,1386.061,1989.836,1388.876Z" transform="translate(-6.276)"/>
+                        <path id="Trazado_24" data-name="Trazado 24" d="M1976.457,1456.861c6.011,0,12.025.1,18.034-.041,3.167-.073,2.427,2.14,2.6,4.015.208,2.3-.511,3.313-2.883,3.191a58.272,58.272,0,0,0-9.983.034C1979.086,1464.684,1976.521,1462.646,1976.457,1456.861Z" transform="translate(-5.999)"/>
+                        <path id="Trazado_25" data-name="Trazado 25" d="M1972.012,1389.586c0-1.82.142-3.655-.032-5.458-.276-2.871.9-3.64,3.53-3.666,2.86-.029,3.465,1.281,3.365,3.9-.144,3.8-.155,7.615,0,11.414.117,2.8-.458,4.117-3.589,4.165-3.5.054-3.384-1.927-3.295-4.393C1972.067,1393.56,1972.011,1391.572,1972.012,1389.586Z" transform="translate(-5.807)"/>
+                        <path id="Trazado_26" data-name="Trazado 26" d="M1868.679,1451.454c0,1.987-.124,3.985.032,5.959.208,2.63-.436,3.9-3.324,3.823-2.581-.064-3.723-.7-3.582-3.614.2-4.13.19-8.284,0-12.415-.125-2.776,1.057-3.325,3.382-3.244,2.075.072,3.809-.011,3.527,3.036C1868.518,1447.132,1868.677,1449.3,1868.679,1451.454Z" transform="translate(-1.119)"/>
+                        <path id="Trazado_27" data-name="Trazado 27" d="M1956.851,1393.236c-.745,2.322,2.168,7.314-4.116,6.622-1.787-.2-2.606-.8-2.555-2.694.055-1.995-.055-3.995.018-5.989.083-2.3-.91-5.008,3.171-5.1,4.342-.1,3.394,2.758,3.479,5.262C1956.865,1391.832,1956.851,1392.332,1956.851,1393.236Z" transform="translate(-4.879)"/>
+                        <path id="Trazado_28" data-name="Trazado 28" d="M1872.857,1455.672c0-4.633.111-9.271-.042-13.9-.092-2.756,1.4-2.831,3.316-2.781,1.814.048,3.186-.092,3.481,2.687C1880.256,1447.751,1875.563,1451.055,1872.857,1455.672Z" transform="translate(-1.588)"/>
+                      </g>
+                    </svg>
+                  </a>
                   <div class="underline">
                     <span class="line"></span>
                   </div>
@@ -477,17 +503,17 @@
                 <p>CÓMO FUNCIONA</p>
                 <p>Adoptamos el enfoque operativo de la ciberseguridad</p>
                 <p>Combinando nuestra plataforma nativa en la nube con nuestros equipos altamente capacitados, trabajamos como una extensión de su equipo para brindar monitoreo, detección y respuesta las 24 horas del día, los 7 días de la semana, así como una administración de riesgos continua para proteger de manera proactiva su entorno mientras fortalecemos continuamente su postura de seguridad.</p>
-                <div class="arrow-wrp">
+                <a href="#first" class="arrow-wrp">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 65.4 153.045">
                         <g id="Grupo_1" data-name="Grupo 1" transform="translate(0.15 0.054)">
                         <path id="Trazado_1" data-name="Trazado 1" d="M26.5,126.6V6.6a6.308,6.308,0,0,1,3.9-6,6.254,6.254,0,0,1,7.1,1.1,6.286,6.286,0,0,1,2.2,5.2V126.6c.4,0,.5-.4.7-.6l12.9-18A6.621,6.621,0,0,1,64,115.8c-7.5,10.4-14.9,20.8-22.4,31.2-.7,1-1.4,1.9-2.1,2.9-2.8,4-7.8,4.1-10.9.4-4.2-5.1-8.3-10.2-12.5-15.3-4.9-5.9-9.7-11.9-14.6-17.8a6.628,6.628,0,0,1-.5-8.1c2.2-3.3,7.2-3.9,9.9-1.1,2.8,2.9,5.1,6.2,7.7,9.3,2.5,3,4.9,6,7.3,8.9A1.275,1.275,0,0,1,26.5,126.6Z"/>
                         </g>
                     </svg>
-                </div>
+                </a>
             </div>
         </div>
 
-        <div class="article-sec">
+        <div class="article-sec" id="first">
             <div class="icon">
                 <p class="number">01</p>
                 <p class="title">Amplia visibilidad</p>
@@ -565,12 +591,50 @@
             <div class="text">
                 <h3>Operaciones de seguridad</h3>
                 <p class="subtitle">Creado en nuestra plataforma y entregado por nuestro equipo</p>
-                <h4>- Detección y respuesta administradas</h4>
-                <p>Detecte, responda y recupérese rápidamente de amenazas avanzadas.</p>
-                <h4>- Riesgo gestionado</h4>
-                <p>Descubra, compare y fortalezca su entorno frente a vulnerabilidades.</p>
-                <h4>- Monitoreo administrado en la nube</h4>
-                <p>Identifique, supervise y simplifique la seguridad de la infraestructura y los servicios en la nube.</p>
+                <div class="item">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 150.412">
+                    <g id="Grupo_2" data-name="Grupo 2" transform="translate(-1511.829 -1326.37)">
+                      <path id="Trazado_2" data-name="Trazado 2" d="M1661.647,1401.342c.8,9.42-1.065,18.563-4.451,27.4-18.673,48.732-81.008,63.879-119.923,29.145-16.589-14.806-25.347-33.528-25.443-55.6-.176-40.642,29.76-70.737,64.983-75.2,26.709-3.388,49.2,5.294,67.177,25.376,1.6,1.788,2.907,2.364,4.768.659,2.015-1.846,3.238-1.042,4.419,1.078,2.055,3.69,4.2,7.342,6.529,10.861,1.57,2.37.963,3.479-1.454,4.619-14.519,6.851-28.981,13.821-43.464,20.747-2.722,1.3-5.432,2.632-8.179,3.878-3.959,1.8-7.421,3.468-8.679,8.614-1.291,5.281-7.65,7.415-12.776,5.435a10.251,10.251,0,0,1-6.2-12.38c1.656-5.427,7.315-9.044,12.472-6.882,3.937,1.65,6.333.468,9.023-1.809,1.009-.854,2.171-1.527,3.254-2.3,4.611-3.276,4.606-3.456-.129-6.9a27.365,27.365,0,0,0-43.087,26.72,26.924,26.924,0,0,0,20.661,21.85c9.882,2.125,18.847-.885,27.291-5.892,3.279-1.944,6.068-4.567,9.767-7.551-1.294,4.951-3.827,7.969-6.568,10.766a34.1,34.1,0,0,1-47.708.7c-13.205-12.572-14.029-33.767-1.831-47.111,13.055-14.281,33.829-15.4,48.338-2.374,2.452,2.2,4.139,2.715,6.624.4a30.523,30.523,0,0,1,5.3-3.783c2.6-1.536,2.86-2.827.621-5.181a49.293,49.293,0,0,0-53.611-12.094,48.182,48.182,0,0,0-30.945,45.25c0,19.485,8.63,34.361,25.681,43.467,16.74,8.939,33.726,7.946,49.935-2.118a61.888,61.888,0,0,0,26.979-33.826,1.933,1.933,0,0,1,1.311-1.6c-.1,6.259-2.026,11.884-4.408,17.322-9.591,21.9-33.412,35.391-57.11,32.489-24.394-2.986-44.166-21.531-48.363-45.36a55.6,55.6,0,0,1,96.318-46.887c1.594,1.79,2.866,2.363,4.752.663a27.952,27.952,0,0,1,2.332-1.718c4.854-3.535,6.2-2.667.577-8.219-20.038-19.783-43.953-26.028-70.567-17.467-26.423,8.5-42.169,27.6-46.548,55-6.533,40.884,25.15,77.744,66.542,78.479,19.451.345,35.527-7.187,49.975-19.613,14.731-12.67,22.965-28.6,25.579-47.661C1661.468,1402.274,1661.565,1401.809,1661.647,1401.342Z"/>
+                    </g>
+                  </svg>
+                  <div class="item-text">
+                    <h4>Detección y respuesta administradas</h4>
+                    <p>Detecte, responda y recupérese rápidamente de amenazas avanzadas.</p>
+                  </div>
+                </div>
+                <div class="item">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 150">
+                    <g id="Grupo_7" data-name="Grupo 7" transform="translate(-1516.5 -1527.5)">
+                      <g id="Grupo_4" data-name="Grupo 4">
+                        <path id="Trazado_4" data-name="Trazado 4" d="M1568.293,1656.882c.408-3.159,1.725-6.051,2.729-9.026,4.34-12.862,8.776-25.692,13.142-38.546.891-2.624.821-2.657-1.984-2.663-4.405-.008-8.81.012-13.215-.008-2.465-.012-2.608-.211-1.842-2.51q7.342-22.029,14.694-44.056c.253-.759.387-1.558.577-2.339h30.846a68.337,68.337,0,0,1-4.018,8.285c-3.786,7.532-7.675,15.012-11.509,22.519-1.063,2.081-1.041,2.107,1.311,2.112,4.914.011,9.827-.016,14.74.028.745.007,1.818-.5,2.188.393.32.774-.58,1.428-1.038,2.058q-11,15.121-22.028,30.217-11.469,15.729-22.923,31.468c-.469.646-.822,1.376-1.23,2.068Z"/>
+                      </g>
+                      <g id="Grupo_5" data-name="Grupo 5">
+                        <path id="Trazado_5" data-name="Trazado 5" d="M1554.481,1527.5H1516.5v36.058h5.769v-30.288h32.211Z"/>
+                        <path id="Trazado_6" data-name="Trazado 6" d="M1625.635,1527.5v5.769h35.1v30.288h5.769V1527.5Z"/>
+                      </g>
+                      <g id="Grupo_6" data-name="Grupo 6">
+                        <path id="Trazado_7" data-name="Trazado 7" d="M1554.481,1671.731h-32.211v-37.019H1516.5V1677.5h37.981Z"/>
+                        <path id="Trazado_8" data-name="Trazado 8" d="M1660.731,1634.712v37.019h-35.1v5.769H1666.5v-42.788Z"/>
+                      </g>
+                    </g>
+                  </svg>
+                  <div class="item-text">
+                    <h4>Riesgo gestionado</h4>
+                    <p>Descubra, compare y fortalezca su entorno frente a vulnerabilidades.</p>
+                  </div>
+                </div>
+                <div class="item">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 111.065">
+                    <g id="Grupo_3" data-name="Grupo 3" transform="translate(-1516.982 -1160)">
+                      <path id="Trazado_3" data-name="Trazado 3" d="M1609.123,1160a62.543,62.543,0,0,1,8.227,1.847c12.151,4.016,20.074,12.846,24.748,25.38a38.581,38.581,0,0,1,2.56,10.351,2.619,2.619,0,0,0,1.72,2.382c13.392,6.367,21.442,20.663,20.534,36.365-1,17.352-13.3,31.782-29.288,34.31a29.281,29.281,0,0,1-4.537.372c-27.723.024-55.448.135-83.17-.037-11.061-.068-20.4-4.706-27.083-14.478-8.511-12.443-7.613-29.868,1.874-41.582a28.132,28.132,0,0,1,12.313-9.277c.735-.263.931-.728,1.017-1.521,1.376-12.68,9.814-23.046,20.949-25.813a24.378,24.378,0,0,1,12.3.248,2.051,2.051,0,0,0,2.539-1.071c4.428-6.423,9.834-11.556,16.739-14.7a40.768,40.768,0,0,1,9.71-2.779Zm-5.8,69.863c.252-.584.371-.794.436-1.022,2.3-8.04,4.741-16.033,6.7-24.184a16.784,16.784,0,0,1,.688-2.423,2.6,2.6,0,0,1,4.787-.52,8.527,8.527,0,0,1,.79,1.734c2.022,5.407,3.414,11.054,5.337,16.5.849,2.4,1.43,2.767,3.731,2.435a4.179,4.179,0,0,0,2.306-1.531,5.059,5.059,0,0,1,7.684.113,6.409,6.409,0,0,1,.084,8.385,5.026,5.026,0,0,1-7.574.342,4.32,4.32,0,0,0-3.485-1.426c-1.011.056-2.03-.051-3.039.025-1.948.145-3.1-.858-3.8-2.75-1.019-2.778-2.092-5.532-3.168-8.286-.18-.46-.245-1.045-.807-1.358-.13.363-.249.631-.325.913q-3.72,13.766-7.435,27.532a12.37,12.37,0,0,1-.568,1.837c-.948,2.112-2.931,2.368-4.352.606a7.356,7.356,0,0,1-1.388-3.206q-2.643-12.523-5.317-25.036c-.426-2-.881-3.989-1.382-6.25a5.756,5.756,0,0,0-.287.693q-2.676,13.431-5.352,26.862c-.489,2.431-1.025,4.855-1.646,7.25a2.757,2.757,0,0,1-5.435.23c-.367-1.02-.683-2.062-1.007-3.1-1.254-4.01-2.494-8.026-3.762-12.03-.14-.439-.089-1.169-.627-1.2-.465-.029-.641.641-.907,1.031a20.7,20.7,0,0,0-1.25,1.971,4.8,4.8,0,0,1-4.818,2.7c-14.372-.08-28.744-.036-43.116-.03-1.806,0-1.88.047-1.749,2.028a26.9,26.9,0,0,0,4.3,13.376,25.9,25.9,0,0,0,22.47,12.148c27.684.155,55.368.057,83.052.033a23.345,23.345,0,0,0,4.121-.389c19.54-3.56,29.647-27.171,19.554-45.627a27.916,27.916,0,0,0-13.461-12.339c-2.894-1.3-4.4-3.373-4.758-6.809a39.935,39.935,0,0,0-8.244-20.385c-5.324-6.94-12.376-10.509-20.521-11.706-7.433-1.093-14.5-.011-20.986,4.349a38.74,38.74,0,0,0-10.485,10.913c-2.192,3.284-4.027,4.019-7.608,3.065-.358-.1-.714-.2-1.075-.274-4.487-.909-8.893-.816-13.1,1.345-7.215,3.7-11.172,9.978-12.266,18.43-.438,3.385-1.769,5.853-4.9,7.076-7.5,2.928-12.176,8.846-14.844,16.8-.566,1.688-.475,1.792,1.133,1.792q20.522.011,41.042.024a2.581,2.581,0,0,0,2.413-1.372c1.416-2.273,2.9-4.494,4.35-6.742.758-1.175,1.693-1.99,3.113-1.763s2.088,1.316,2.5,2.668c1.06,3.45,2.116,6.9,3.2,10.345.117.373.073.871.608,1.155.715-4.071,1.42-8.076,2.121-12.082,1.756-10.025,3.339-20.087,5.406-30.047.535-2.577,1.526-3.688,3.047-3.645,1.416.041,2.547,1.454,2.995,3.8.4,2.1.767,4.2,1.157,6.3C1599.475,1209.222,1601.357,1219.318,1603.321,1229.863Z"/>
+                    </g>
+                  </svg>
+                  
+                  <div class="item-text">
+                    <h4>Riesgo gestionado</h4>
+                    <p>Descubra, compare y fortalezca su entorno frente a vulnerabilidades.</p>
+                  </div>
+                </div>
             </div>
         </div>
 
@@ -605,8 +669,8 @@
               <path id="Trazado_5" data-name="Trazado 5" d="M67.677,45.528A22.248,22.248,0,0,1,56.9,42.765L2.52,14.671,7.064,6.43,61.587,34.524a12.424,12.424,0,0,0,11.987,0L128.194,6.43l4.544,8.241L78.214,42.765a21.846,21.846,0,0,1-10.537,2.763Z" transform="translate(5.597 4.124)" fill="#fff"/>
             </g>
         </svg>
-        <a href="mailto:hr@soenix.com">
-          hr@soenix.com
+        <a href="mailto:info@soenix.com">
+          info@soenix.com
         </a>
       </div>
 
